# MagicTalesAI

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  package-lock.json  pyproject.toml  requirements.txt
backend/: elevenlabs_client.py  gemini_live_qa.py  live_ws.py  main.py  models.py  music_generator.py  storage.py  story_controller.py  tts_generator.py  voice_assigner.py
background_audio/: __init__.py  __main__.py  cache.py  cli.py  config.py  pipeline.py  reader.py
background_audio/analysis/: analyzer.py  chunker.py  models.py
background_audio/audio/: _lyria_vertex.py  lyria_client.py  models.py  storage.py
background_audio/prompts/: builder.py  models.py  templates.py
frontend/: index.html
live_pipeline/: __init__.py  __main__.py  audio_handler.py  elevenlabs_manager.py  main.py  story_controller.py
magictales-ai-stories/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
magictales-ai-stories/src/: App.tsx  index.css  vite-env.d.ts
magictales-ai-stories/src/components/: CharacterPanel.tsx  HeroSection.tsx  HowItWorks.tsx  InteractivePlayer.tsx  Navbar.tsx  StoryPlayer.tsx  VoiceModeSelector.tsx
magictales-ai-stories/src/components/ui/: button.tsx
magictales-ai-stories/src/hooks/: useLiveQA.ts  useSpeechSynthesis.ts
magictales-ai-stories/src/lib/: stories.ts
magictales-ai-stories/src/pages/: CreateAudiobook.tsx  Index.tsx  StudyCard.tsx
magictales-ai-stories/src/types/: story.ts
tests/: conftest.py  test_builder.py  test_chunker.py
